--- a/src/homepage/style.css
+++ b/src/homepage/style.css
@@ -2,11 +2,12 @@
 
 * {
   box-sizing: border-box;
-  }
+  list-style: none;
+}
   
 body {
   margin: 0px;
-  font-family: 'Roboto',-apple-system, sans-serif;
+  font-family: sans-serif;
   }
 
 .campeonatos {
@@ -43,9 +44,8 @@ nav .container {
 }
 nav a {
   color: black;
-  text-decoration: none;
-  font-size: 30px;
-  font-weight: 400;
+  font-size: 20px;
+  font-weight: 500;
 }
 
 nav .buttons ul,
@@ -55,21 +55,28 @@ nav .buttons {
   align-items: center;
   margin: 0;
   padding: 0;
-  text-decoration: none;
 }
 
 nav .logo {
   color: black;
   margin-left: 20px;
   font-weight: bold;
-  text-decoration: none;
+}
+
+nav .logo a {
+  font-size: 28px;
+  font-weight: 500;
 }
 
 nav .buttons ul li {
-  list-style: none;
   padding: 15px 20px;
   }
   
+nav a:hover {
+  text-decoration: none;
+  color: black;
+  }
+
 nav .buttons ul li:hover {
   cursor: pointer;
   background-color: #36d959;
@@ -92,3 +99,4 @@ nav .buttons ul li:hover {
 .placar {
   margin: 0 10px;
 }
+
