--- a/src/style.css
+++ b/src/style.css
@@ -256,3 +256,21 @@ th {
   display: flex;
   align-items: center;
 }
+
+.campeonatos a {
+  text-decoration: none;
+  color: black;
+}
+
+.jogos .navegarGames {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  margin-bottom: 20px;
+}
+
+.jogos .navegarGames i {
+  font-size: 30px;
+  cursor: pointer;
+}
