--- a/src/futscore/backend/templates/tabelaSerieA.html
+++ b/src/futscore/backend/templates/tabelaSerieA.html
@@ -20,8 +20,10 @@
                 </a>
             </div>
             <div>
-                <img src="{% static 'img/copa-do-brasil.png' %}" alt="copa do brasil">
-                <h5>Copa do Brasil</h5>
+                <a href="{% url 'CDB' 4 %}">
+                    <img src="{% static 'img/copa-do-brasil.png' %}" alt="copa do brasil">
+                    <h5>Copa do Brasil</h5>
+                </a>
             </div>
             <div>
                 <img src="{% static 'img/libert.png' %}" alt="Libertadores">
