--- a/src/futscore/static/style.css
+++ b/src/futscore/static/style.css
@@ -197,6 +197,19 @@ th {
   width: 555px;
 }
 
+.jogos .jogo-unico {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border-top: 1px solid #EAEDF2;
+  border-bottom: 1px solid #EAEDF2;
+  border-left: 1px solid #EAEDF2;
+  border-right: 1px solid #EAEDF2;
+  padding: 0px 10px;
+  width: 555px;
+}
+
 .jogos .jogo-volta {
   border-right: 1px solid #EAEDF2;
 }
@@ -220,7 +233,8 @@ th {
 }
 
 .jogos .jogo-volta img,
-.jogos .jogo-ida img {
+.jogos .jogo-ida img,
+.jogos .jogo-unico img {
   width: 50px;
 }
 
@@ -602,7 +616,8 @@ body {
     margin-left: 0px;
   }
   .jogos .jogo-ida,
-  .jogos .jogo-volta {
+  .jogos .jogo-volta,
+  .jogos .jogo-unico {
     width: 100%;
   }
 }
