--- a/src/futscore/backend/templates/index.html
+++ b/src/futscore/backend/templates/index.html
@@ -1,141 +1,138 @@
 {% extends "layout.html" %}
 
 {% block content %}
-<div class="container"> 
-    <div class="searchBar">
-        <input id="searchQueryInput" type="text" name="searchQueryInput" placeholder="Pesquise o seu time do coração" value="" />
-        <button id="searchQuerySubmit" type="submit" name="searchQuerySubmit">
-          <svg style="width:24px;height:24px" viewBox="0 0 24 24"><path fill="#666666" d="M9.5,3A6.5,6.5 0 0,1 16,9.5C16,11.11 15.41,12.59 14.44,13.73L14.71,14H15.5L20.5,19L19,20.5L14,15.5V14.71L13.73,14.44C12.59,15.41 11.11,16 9.5,16A6.5,6.5 0 0,1 3,9.5A6.5,6.5 0 0,1 9.5,3M9.5,5C7,5 5,7 5,9.5C5,12 7,14 9.5,14C12,14 14,12 14,9.5C14,7 12,5 9.5,5Z" />
-          </svg>
-        </button>
-    </div>
-    <h2>Campeonatos</h2>
-    <div class="campeonatos">
-        <div>
-            <a href="/src/tabelaSerieA.html">
-                {% load static %}
-                <img src="{% static 'img/brasileirao.png' %}" alt="brasileirao">
-                <h5>Brasileirão Série A</h5>
-            </a>
+    <style>
+        body {
+        overflow: hidden;
+        }
+    </style>
+
+    <div class="container"> 
+        <div class="searchBar">
+            <input id="searchQueryInput" type="text" name="searchQueryInput" placeholder="Pesquise o seu time do coração" value="" />
+            <button id="searchQuerySubmit" type="submit" name="searchQuerySubmit">
+            <svg style="width:24px;height:24px" viewBox="0 0 24 24"><path fill="#666666" d="M9.5,3A6.5,6.5 0 0,1 16,9.5C16,11.11 15.41,12.59 14.44,13.73L14.71,14H15.5L20.5,19L19,20.5L14,15.5V14.71L13.73,14.44C12.59,15.41 11.11,16 9.5,16A6.5,6.5 0 0,1 3,9.5A6.5,6.5 0 0,1 9.5,3M9.5,5C7,5 5,7 5,9.5C5,12 7,14 9.5,14C12,14 14,12 14,9.5C14,7 12,5 9.5,5Z" />
+            </svg>
+            </button>
         </div>
-        <div>
+        <h2>Campeonatos</h2>
+        <div class="campeonatos">
             {% load static %}
-            <img src="{% static 'img/Campeonato_Brasileiro_Série_B.png' %}" alt="Série_B">
-            <h5>Série B</h5>
-        </div>
-        <div>
-            {% load static %}
-            <img src="{% static 'img/conmebol-sul-americana.png' %}" alt="conmebol-sul-americana">
-            <h5>Sul Americana</h5>
-            
-        </div>
-        <div>
-            <a href="/src/tabelaCDB.html">
-                {% load static %}
-                <img src="{% static 'img/copa-do-brasil.png' %}" alt="copa do brasil">
-                <h5>Copa do Brasil</h5>
-            </a>
-        </div>
-        <div>
-            {% load static %}
-            <img src="{% static 'img/libert.png' %}" alt="Libertadores">
-            <h5>Libertadores</h5>
-        </div>
-    </div> 
-    <h2>Ao Vivo</h2>
-    <div class="jogosHome">
-        <div class="jogos">
-            <div class="jogo" id="chave-1">
-                <div class="jogo-ida">
-                    <div>
-                        <div class="info">
-                            <div class="data aovivo">Ao Vivo 88'</div>
-                            <div class="local">Mineirão</div>
-                        </div>
-                        <div class="times">
-                            <div class="mandante">
-                                Cruzeiro
-                                {% load static %}
-                                <img src="{% static 'img/escudos/Cruzeiro.png' %}" alt="Cruzeiro">
+
+            <div>
+                <a href="{% url 'serieA' %}">
+                    <img src="{% static 'img/brasileirao.png' %}" alt="brasileirao">
+                    <h5>Brasileirão Série A</h5>
+                </a>
+            </div>
+            <div>
+                <a href="{% url 'serieB' %}">
+                    <img src="{% static 'img/Campeonato_Brasileiro_Série_B.png' %}" alt="Série_B">
+                    <h5>Série B</h5>
+                </a>
+            </div>
+            <div>
+                <a href="{% url 'CDB' 4 %}">
+                    <img src="{% static 'img/copa-do-brasil.png' %}" alt="copa do brasil">
+                    <h5>Copa do Brasil</h5>
+                </a>
+            </div>        
+        </div> 
+        <h2>Ao Vivo</h2>
+        <div class="jogosHome">
+            <div class="jogos">
+                <div class="jogo" id="chave-1">
+                    <div class="jogo-ida">
+                        <div>
+                            <div class="info">
+                                <div class="data aovivo">Ao Vivo 88'</div>
+                                <div class="local">Mineirão</div>
                             </div>
-                            <div class="placar">3 x 0</div>
-                            <div class="visitante">
-                                {% load static %}
-                                <img src="{% static 'img/escudos/América-MG.png' %}" alt="América-MG">
-                                América-MG
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="jogo-volta">
-                    <div>
-                        <div class="info">
-                            <div class="data aovivo">Ao Vivo 88'</div>
-                            <div class="local">Neo Química Arena</div>
-                        </div>
-                        <div class="times">
-                            <div class="mandante">
-                                Corinthians
-                                {% load static %}
-                                <img src="{% static 'img/escudos/Corinthians.png' %}" alt="Corinthians">
-                            </div>
-                            <div class="placar">2 x 1</div>
-                            <div class="visitante">
-                                {% load static %}
-                                <img src="{% static 'img/escudos/Atlético-MG.png' %}" alt="Atlético-MG">
-                                Atlético-MG
+                            <div class="times">
+                                <div class="mandante">
+                                    Cruzeiro
+                                    {% load static %}
+                                    <img src="{% static 'img/escudos/Cruzeiro.png' %}" alt="Cruzeiro">
+                                </div>
+                                <div class="placar">3 x 0</div>
+                                <div class="visitante">
+                                    {% load static %}
+                                    <img src="{% static 'img/escudos/América-MG.png' %}" alt="América-MG">
+                                    América-MG
+                                </div>
                             </div>
                         </div>
                     </div>
-                </div>
-            </div>                
-        </div>
-        <div class="jogos">
-            <div class="jogo" id="chave-1">
-                <div class="jogo-ida">
-                    <div>
-                        <div class="info">
-                            <div class="data aovivo">Ao Vivo 23'</div>
-                            <div class="local">Allianz Parque</div>
-                        </div>
-                        <div class="times">
-                            <div class="mandante">
-                                Palmeiras
-                                {% load static %}
-                                <img src="{% static 'img/escudos/Palmeiras.png' %}" alt="Palmeiras">
+                    <div class="jogo-volta">
+                        <div>
+                            <div class="info">
+                                <div class="data aovivo">Ao Vivo 88'</div>
+                                <div class="local">Neo Química Arena</div>
                             </div>
-                            <div class="placar">1 x 1</div>
-                            <div class="visitante">
-                                {% load static %}
-                                <img src="{% static 'img/escudos/Flamengo.png' %}" alt="Flamengo">
-                                Flamengo
+                            <div class="times">
+                                <div class="mandante">
+                                    Corinthians
+                                    {% load static %}
+                                    <img src="{% static 'img/escudos/Corinthians.png' %}" alt="Corinthians">
+                                </div>
+                                <div class="placar">2 x 1</div>
+                                <div class="visitante">
+                                    {% load static %}
+                                    <img src="{% static 'img/escudos/Atlético-MG.png' %}" alt="Atlético-MG">
+                                    Atlético-MG
+                                </div>
                             </div>
                         </div>
                     </div>
-                </div>
-                <div class="jogo-volta">
-                    <div>
-                        <div class="info">
-                            <div class="data aovivo">Ao Vivo 23'</div>
-                            <div class="local">Maracanã</div>
-                        </div>
-                        <div class="times">
-                            <div class="mandante">
-                                Fluminense
-                                {% load static %}
-                                <img src="{% static 'img/escudos/Fluminense.png' %}" alt="Fluminense">
+                </div>                
+            </div>
+            <div class="jogos">
+                <div class="jogo" id="chave-1">
+                    <div class="jogo-ida">
+                        <div>
+                            <div class="info">
+                                <div class="data aovivo">Ao Vivo 23'</div>
+                                <div class="local">Allianz Parque</div>
                             </div>
-                            <div class="placar">1 x 0</div>
-                            <div class="visitante">
-                                {% load static %}
-                                <img src="{% static 'img/escudos/Santos.png' %}" alt="Santos">
-                                Santos
+                            <div class="times">
+                                <div class="mandante">
+                                    Palmeiras
+                                    {% load static %}
+                                    <img src="{% static 'img/escudos/Palmeiras.png' %}" alt="Palmeiras">
+                                </div>
+                                <div class="placar">1 x 1</div>
+                                <div class="visitante">
+                                    {% load static %}
+                                    <img src="{% static 'img/escudos/Flamengo.png' %}" alt="Flamengo">
+                                    Flamengo
+                                </div>
                             </div>
                         </div>
                     </div>
-                </div>
+                    <div class="jogo-volta">
+                        <div>
+                            <div class="info">
+                                <div class="data aovivo">Ao Vivo 23'</div>
+                                <div class="local">Maracanã</div>
+                            </div>
+                            <div class="times">
+                                <div class="mandante">
+                                    Fluminense
+                                    {% load static %}
+                                    <img src="{% static 'img/escudos/Fluminense.png' %}" alt="Fluminense">
+                                </div>
+                                <div class="placar">1 x 0</div>
+                                <div class="visitante">
+                                    {% load static %}
+                                    <img src="{% static 'img/escudos/Santos.png' %}" alt="Santos">
+                                    Santos
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>  
             </div>  
-        </div>  
+        </div>
     </div>
-</div>
+    
 {% endblock content %}
